# uuid-collections

./: Cargo.toml  README.md
src/: ext.rs  hasher.rs  lib.rs  like.rs  tests.rs
src/ext/: rayon.rs  rkyv.rs  scylla.rs
