[package]
name = "uuid-collections"
description = "UUID-optimized collections"
version = "0.1.7"
homepage = "https://github.com/r3v2d0g/uuid-collections"
documentation = "https://docs.rs/uuid-collections"
license = "MPL-2.0"
authors = ["Matthieu (MLB) Le brazidec <r3v2d0g@jesus.gg>"]
edition = "2024"

[features]
# Implements the traits necessary to use `UuidMap` and `UuidSet` with `rayon`.
rayon-1 = ["dep:rayon", "indexmap/rayon"]

# Implements the traits necessary to use `UuidMap` and `UuidSet` with `rkyv`.
rkyv-08 = ["dep:rkyv"]

# Implements the traits necessary to use `UuidMap` and `UuidSet` with `scylla`.
scylla-1 = ["dep:scylla"]

[dependencies]
indexmap = "2.12"
uuid = "1.18"
rayon = { version = "1.11", optional = true }
rkyv = { version = "0.8", optional = true, features = ["indexmap-2", "uuid-1"] }
scylla = { version = "1.4", optional = true }
uuid-like = "0.2"

[dev-dependencies]
uuid = { version = "1.18", features = ["v1", "v4", "v7"] }
